code/objects/ApplicationSettings__c.object
<CustomObject>
    <fields>
        <fullName>Active_Form_Instance_Status__c</fullName>
        <label>Active Form Instance Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttachmentTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>AttachmentTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Complete_Form_Instance_Status__c</fullName>
        <label>Complete Form Instance Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactMergeFields__c</fullName>
        <label>Contact Merge Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ContactTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ContactTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Anonymous_Leads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Anonymous Leads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Debug__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DefaultGateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Gateway</label>
        <referenceTo>Gateway__c</referenceTo>
        <relationshipLabel>Application Settings</relationshipLabel>
        <relationshipName>Application_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FormTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>FormTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeadMergeFields__c</fullName>
        <label>Lead Merge Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LeadTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>LeadTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PossibleAnswerDelimiter__c</fullName>
        <label>Possible Answer Delimiter</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMSTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>SMSTrigger</label>
        <type>Checkbox</type>
    </fields>
    <label>Application Setting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Application Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>